--- a/index.html
+++ b/index.html
@@ -5,35 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicons -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/favicons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/favicons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/favicons/favicon-16x16.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/favicons/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="assets/favicons/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
+    <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5" />
     <link rel="shortcut icon" href="assets/favicons/favicon.ico" />
     <meta name="msapplication-TileColor" content="#2b5797" />
-    <meta
-      name="msapplication-config"
-      content="assets/favicons/browserconfig.xml"
-    />
+    <meta name="msapplication-config" content="assets/favicons/browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
 
     <!-- Fonts -->
@@ -59,7 +38,7 @@
     <header class="flex items-center justify-center py-2 bg-gray-900">
       <a href="https://github.com/glamorrr/cool-sites" target="_blank">
         <svg
-          class="w-12 h-12 mx-auto text-white transition-colors fill-current  hover:text-gray-100"
+          class="w-12 h-12 mx-auto text-white transition-colors fill-current hover:text-gray-100"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 512 512"
         >
@@ -82,20 +61,18 @@
             />
           </div>
           <article
-            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
           >
-            <h1 class="text-xl font-semibold text-center font-poppins">
-              Easybank Landing Page
-            </h1>
+            <h1 class="text-xl font-semibold text-center font-poppins">Easybank Landing Page</h1>
             <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
                 href="/easybank-landing-page"
                 >Demo</a
               >
               &bull;
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/easybank-landing-page"
                 target="_blank"
                 >Code</a
@@ -104,7 +81,7 @@
             <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
+                class="transition-all border-b-2 border-dotted hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -123,20 +100,18 @@
             />
           </div>
           <article
-            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
           >
-            <h1 class="text-xl font-semibold text-center font-poppins">
-              Huddle Landing Page
-            </h1>
+            <h1 class="text-xl font-semibold text-center font-poppins">Huddle Landing Page</h1>
             <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
                 href="/huddle-landing-page"
                 >Demo</a
               >
               &bull;
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/huddle-landing-page"
                 target="_blank"
                 >Code</a
@@ -145,7 +120,7 @@
             <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
+                class="transition-all border-b-2 border-dotted hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -164,20 +139,18 @@
             />
           </div>
           <article
-            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
           >
-            <h1 class="text-xl font-semibold text-center font-poppins">
-              Manage Landing Page
-            </h1>
+            <h1 class="text-xl font-semibold text-center font-poppins">Manage Landing Page</h1>
             <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
                 href="/manage-landing-page"
                 >Demo</a
               >
               &bull;
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/manage-landing-page"
                 target="_blank"
                 >Code</a
@@ -186,7 +159,7 @@
             <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
+                class="transition-all border-b-2 border-dotted hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -205,20 +178,18 @@
             />
           </div>
           <article
-            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
           >
-            <h1 class="text-xl font-semibold text-center font-poppins">
-              Social Proof Section
-            </h1>
+            <h1 class="text-xl font-semibold text-center font-poppins">Social Proof Section</h1>
             <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
                 href="/social-proof-section"
                 >Demo</a
               >
               &bull;
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/social-proof-section"
                 target="_blank"
                 >Code</a
@@ -227,7 +198,7 @@
             <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
+                class="transition-all border-b-2 border-dotted hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -246,20 +217,20 @@
             />
           </div>
           <article
-            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
           >
             <h1 class="text-xl font-semibold text-center font-poppins">
               Testimonials Grid Section
             </h1>
             <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
                 href="/testimonials-grid-section"
                 >Demo</a
               >
               &bull;
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/testimonials-grid-section"
                 target="_blank"
                 >Code</a
@@ -268,7 +239,7 @@
             <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
+                class="transition-all border-b-2 border-dotted hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -287,22 +258,18 @@
             />
           </div>
           <article
-            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
           >
-            <h1 class="text-xl font-semibold text-center font-poppins">
-              Productivity Website
-            </h1>
+            <h1 class="text-xl font-semibold text-center font-poppins">Productivity Website</h1>
             <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
                 href="https://jejak.vercel.app"
                 target="_blank"
                 >Demo</a
               >
             </p>
-            <p class="mt-4 text-xs text-center text-gray-700">
-              Design by: Toni
-            </p>
+            <p class="mt-4 text-xs text-center text-gray-700">Design by: Toni</p>
           </article>
         </div>
 
@@ -316,20 +283,18 @@
             />
           </div>
           <article
-            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
           >
-            <h1 class="text-xl font-semibold text-center font-poppins">
-              Juicedaily Landing Page
-            </h1>
+            <h1 class="text-xl font-semibold text-center font-poppins">Juicedaily Landing Page</h1>
             <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
                 href="/juicedaily"
                 >Demo</a
               >
               &bull;
               <a
-                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/juicedaily"
                 target="_blank"
                 >Code</a
@@ -338,10 +303,127 @@
             <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
+                class="transition-all border-b-2 border-dotted hover:text-indigo-600 hover:border-indigo-600"
                 href="https://www.figma.com/community/file/966938373747932093"
                 target="_blank"
                 >Dwinawan</a
+              >
+            </p>
+          </article>
+        </div>
+
+        <div class="md:m-6">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
+            <img
+              width="384"
+              height="282"
+              src="assets/images/product-preview-card-component.jpg"
+              alt="product preview card component image"
+            />
+          </div>
+          <article
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
+          >
+            <h1 class="text-xl font-semibold text-center font-poppins">Product Card Component</h1>
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
+              <a
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
+                href="/product-preview-card-component"
+                >Demo</a
+              >
+              &bull;
+              <a
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-gray-900 hover:border-gray-900"
+                href="https://github.com/glamorrr/cool-sites/tree/master/product-preview-card-component"
+                target="_blank"
+                >Code</a
+              >
+            </p>
+            <p class="mt-4 text-xs text-center text-gray-700">
+              Design by:
+              <a
+                class="transition-all border-b-2 border-dotted hover:text-indigo-600 hover:border-indigo-600"
+                href="https://frontendmentor.io"
+                target="_blank"
+                >Frontend Mentor</a
+              >
+            </p>
+          </article>
+        </div>
+
+        <div class="md:m-6">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
+            <img
+              width="384"
+              height="282"
+              src="assets/images/notification-page.jpg"
+              alt="notification page"
+            />
+          </div>
+          <article
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
+          >
+            <h1 class="text-xl font-semibold text-center font-poppins">Notification Page</h1>
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
+              <a
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
+                href="/notification-page"
+                >Demo</a
+              >
+              &bull;
+              <a
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-gray-900 hover:border-gray-900"
+                href="https://github.com/glamorrr/cool-sites/tree/master/notification-page"
+                target="_blank"
+                >Code</a
+              >
+            </p>
+            <p class="mt-4 text-xs text-center text-gray-700">
+              Design by:
+              <a
+                class="transition-all border-b-2 border-dotted hover:text-indigo-600 hover:border-indigo-600"
+                href="https://frontendmentor.io"
+                target="_blank"
+                >Frontend Mentor</a
+              >
+            </p>
+          </article>
+        </div>
+
+        <div class="md:m-6">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
+            <img
+              width="384"
+              height="282"
+              src="assets/images/qr-code-component.jpg"
+              alt="qr code component preview"
+            />
+          </div>
+          <article
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg sm:mx-auto"
+          >
+            <h1 class="text-xl font-semibold text-center font-poppins">QR Code Component</h1>
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
+              <a
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-green-600 hover:border-green-600"
+                href="/qr-code-component"
+                >Demo</a
+              >
+              &bull;
+              <a
+                class="tracking-wider transition-all border-b-2 border-dotted hover:text-gray-900 hover:border-gray-900"
+                href="https://github.com/glamorrr/cool-sites/tree/master/qr-code-component"
+                target="_blank"
+                >Code</a
+              >
+            </p>
+            <p class="mt-4 text-xs text-center text-gray-700">
+              Design by:
+              <a
+                class="transition-all border-b-2 border-dotted hover:text-indigo-600 hover:border-indigo-600"
+                href="https://frontendmentor.io"
+                target="_blank"
+                >Frontend Mentor</a
               >
             </p>
           </article>
