--- a/notification-page/index.html
+++ b/notification-page/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/notification-page/assets/images/favicon-32x32.png"
+    />
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -199,7 +204,7 @@
             width="40px"
             height="40px"
             class="notification__item-img"
-            src="assets/images/avatar-mark-webber.webp"
+            src="/notification-page/assets/images/avatar-mark-webber.webp"
             alt="mark webber profile picture"
           />
           <div class="notification__item-text">
@@ -217,7 +222,7 @@
             width="40px"
             height="40px"
             class="notification__item-img"
-            src="assets/images/avatar-angela-gray.webp"
+            src="/notification-page/assets/images/avatar-angela-gray.webp"
             alt="angela gray profile picture"
           />
           <div class="notification__item-text">
@@ -234,7 +239,7 @@
             width="40px"
             height="40px"
             class="notification__item-img"
-            src="assets/images/avatar-jacob-thompson.webp"
+            src="/notification-page/assets/images/avatar-jacob-thompson.webp"
             alt="jacob thompson profile picture"
           />
           <div class="notification__item-text">
@@ -253,7 +258,7 @@
             width="40px"
             height="40px"
             class="notification__item-img"
-            src="assets/images/avatar-rizky-hasanuddin.webp"
+            src="/notification-page/assets/images/avatar-rizky-hasanuddin.webp"
             alt="rizki hasanudin profile picture"
           />
           <div class="notification__item-text">
@@ -274,7 +279,7 @@
             width="40px"
             height="40px"
             class="notification__item-img"
-            src="assets/images/avatar-kimberly-smith.webp"
+            src="/notification-page/assets/images/avatar-kimberly-smith.webp"
             alt="kimberly smith profile picture"
           />
           <div class="notification__item-text">
@@ -284,7 +289,12 @@
             <p class="notification__item-time">1 week ago</p>
           </div>
           <div class="notification__item-content-img">
-            <img width="40px" height="40px" src="assets/images/image-chess.webp" alt="chess" />
+            <img
+              width="40px"
+              height="40px"
+              src="/notification-page/assets/images/image-chess.webp"
+              alt="chess"
+            />
           </div>
         </div>
 
@@ -293,7 +303,7 @@
             width="40px"
             height="40px"
             class="notification__item-img"
-            src="assets/images/avatar-nathan-peterson.webp"
+            src="/notification-page/assets/images/avatar-nathan-peterson.webp"
             alt="nathan peterson profile picture"
           />
           <div class="notification__item-text">
@@ -312,7 +322,7 @@
             width="40px"
             height="40px"
             class="notification__item-img"
-            src="assets/images/avatar-anna-kim.webp"
+            src="/notification-page/assets/images/avatar-anna-kim.webp"
             alt="anna kim profile picture"
           />
           <div class="notification__item-text">
