--- a/product-preview-card-component/index.html
+++ b/product-preview-card-component/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/product-preview-card-component/images/favicon-32x32.png"
+    />
 
     <title>Frontend Mentor | Product preview card component</title>
 
@@ -160,7 +165,11 @@
   </head>
   <body>
     <section class="product">
-      <img class="product__img" src="images/image-product-desktop.jpg" alt="perfume" />
+      <img
+        class="product__img"
+        src="/product-preview-card-component/images/image-product-desktop.jpg"
+        alt="perfume"
+      />
       <div class="product__detail">
         <span class="product__tag">PERFUME</span>
         <h1 class="product__title">Gabrielle Essence Eau De Parfum</h1>
