--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/qr-code-component/images/favicon-32x32.png"
+    />
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -89,7 +94,7 @@
     <div class="card">
       <img
         class="card__img"
-        src="images/image-qr-code.png"
+        src="/qr-code-component/images/image-qr-code.png"
         alt="qr code"
         width="300"
         height="300"
